# Sunny-deprecated

./: CHANGELOG.md  Cargo.toml  README.md
src/: main.rs
src/ascii_arts/: ascii_arts.rs  mod.rs
src/config/: config.rs  mod.rs  units.rs
src/modules/: ascii_art.rs  config.rs  database.rs  fetch_weather.rs  fmt_lines.rs  mod.rs  weather.rs
src/remove_colors/: mod.rs  remove_colors.rs
src/weather/: fetch_weather.rs  fmt_lines.rs  get_ascii_art.rs  mod.rs  resolve.rs  weather.rs
src/weather/utils/: colorize.rs  format.rs  get_color.rs  get_data.rs  mod.rs
