[package]
name = "sunny"
version = "0.1.0"
edition = "2024"
authors = ["Baktiar <bakubakosh@gmail.com>"]
license = "GPL-3"
description = "CLI tool for ASCII weather using wttr.in"
readme = "README.md"
homepage = "https://github.com/bkoshik/Sunny"
repository = "https://github.com/bkoshik/Sunny"
keywords = ["weather", "ascii", "cli", "terminal", "wttr"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
chrono = "0.4.41"
toml = "0.9.2"
dirs = "6.0.0"
clap = { version = "4.5.41", features = ["derive"] }
regex = "1.11.1"